# controllers/flight-logs.go
@@ -27,6 +27,7 @@ func NewFlightLogsController(
 // GetFlightLogs
 // @Summary  Get a list of FlightLogs
 // @Param    isOverview    query     string  false  "specify if it's overview"
+// @Param    clientId    query     string  false  "specify clientId"
 // @Param    departureAirportId query string false "departure airport"
 // @Param    arrivalAirportId query string false "arrival airport"
 // @Param    aircraftICAO query string false "aircraft ICAO"
@@ -38,40 +39,8 @@ func NewFlightLogsController(
 // @Failure  500  {object}  utils.ResponseError
 // @Router   /flight-logs [get]
 func (u FlightLogsController) GetFlightLogs(c *gin.Context) {
-	var res []models.FlightStatus
-	//isOverview := c.Request.URL.Query().Get("isOverview")
-	//var result *gorm.DB
-	//if isOverview == "true" {
-	//	result = u.db.
-	//		Preload("Locations" /*, "event_type = (?)", models.StateEvent*/).
-	//		Model(&models.FlightStatus{})
-	//
-	//} else {
-	//	result = u.db.Model(&models.FlightStatus{})
-	//}
-	//// departureAirportId
-	//departureAirportId := c.Request.URL.Query().Get("departureAirportId")
-	//if len(departureAirportId) > 0 {
-	//	result = result.Where("departure_airport_id = ?", departureAirportId)
-	//}
-	//// arrivalAirportId
-	//arrivalAirportId := c.Request.URL.Query().Get("arrivalAirportId")
-	//if len(arrivalAirportId) > 0 {
-	//	result = result.Where("arrival_airport_id = ?", arrivalAirportId)
-	//}
-	//// aircraftICAO
-	//aircraftICAO := c.Request.URL.Query().Get("aircraftICAO")
-	//if len(aircraftICAO) > 0 {
-	//	result = result.Where("aircraft_icao = ?", aircraftICAO)
-	//}
-	//
-	//result = result.Where("LENGTH(arrival_airport_id) > 0")
-	//result.Order("id DESC").Find(&res)
-	//if result.Error != nil {
-	//	c.JSON(500, utils.ResponseError{Message: fmt.Sprintf("Failed to get flight logs: %+v", result.Error)})
-	//	return
-	//}
-	c.JSON(200, res)
+	u.flightLogsService.GetFlightLogs(c)
+	return
 }
 
 // GetFlightLog
