# docs/swagger.yaml
@@ -67,6 +67,8 @@ definitions:
         type: array
       id:
         type: integer
+      localId:
+        type: integer
       locations:
         items:
           $ref: '#/definitions/models.FlightStatusLocation'
@@ -168,6 +170,10 @@ paths:
       - description: specify if it's overview
         in: query
         name: isOverview
+        type: string
+      - description: specify clientId
+        in: query
+        name: clientId
         type: string
       - description: departure airport
         in: query
